--- a/app/src/main/res/layout/mypage_edit.xml
+++ b/app/src/main/res/layout/mypage_edit.xml
@@ -60,12 +60,13 @@
         app:layout_constraintVertical_bias="0.05" />
 
     <ScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:fillViewport="true"
         android:scrollbars="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/topView"
-        tools:layout_editor_absoluteX="-16dp">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -117,7 +118,7 @@
                 android:width="300dp"
                 android:height="70dp"
                 android:background="@color/white"
-                android:text="    기존 아이디"
+                android:hint="    기존 아이디"
                 app:layout_constraintTop_toBottomOf="@+id/AppSignText" />
 
             <TextView
@@ -138,7 +139,7 @@
                 android:width="300dp"
                 android:height="70dp"
                 android:background="@color/white"
-                android:text="    기존 비밀번호"
+                android:hint="    기존 비밀번호"
                 app:layout_constraintTop_toBottomOf="@+id/AppSignText" />
 
             <TextView
@@ -180,7 +181,7 @@
                 android:width="300dp"
                 android:height="70dp"
                 android:background="@color/white"
-                android:text="    기존 닉네임"
+                android:hint="    기존 닉네임"
                 app:layout_constraintTop_toBottomOf="@+id/AppSignText" />
 
             <TextView
@@ -206,7 +207,7 @@
                     android:width="180dp"
                     android:height="70dp"
                     android:background="@color/white"
-                    android:text="  01012345678"
+                    android:hint="  01012345678"
                     app:layout_constraintTop_toBottomOf="@+id/AppSignText" />
 
                 <Button
