--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -44,16 +44,17 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:fillViewport="true"
         android:scrollbars="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/TopView">
+        app:layout_constraintTop_toBottomOf="@id/TopView"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            />
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -307,8 +308,11 @@
                 android:textSize="30dp"
                 android:textColor="@color/white"
                 android:backgroundTint="#28BEEE"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="50dp"/>
+                android:width="300dp"
+                android:height="60dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="40dp"
+                android:layout_gravity="center_horizontal"/>
 
         </LinearLayout>
     </ScrollView>
