feat:LogIn_SignIn_Connected

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -40,6 +40,7 @@
         android:layout_gravity="center"/>
 
     <Button
+        android:id="@+id/LogInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="로그인"
