--- a/app/src/main/res/layout/reportpage.xml
+++ b/app/src/main/res/layout/reportpage.xml
@@ -110,13 +110,13 @@
                 android:id="@+id/PopUpButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:backgroundTint="@color/white"
                 android:text="유형선택"
                 android:textColor="#28BEEE"
-                android:backgroundTint="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/whichLabel"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="60dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/whichLabel" />
 
 
             <TextView
@@ -149,7 +149,7 @@
 
             <Button
                 android:id="@+id/EndWriteButton"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
                 android:text="작성하기"
                 android:textColor="@color/white"
@@ -157,9 +157,9 @@
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/StoryBox"
                 android:layout_marginTop="30dp"
-                android:layout_marginStart="120dp"
-                android:layout_marginEnd="120dp"
+                android:layout_marginStart="60dp"
                 />
+
         </LinearLayout>
 
     </ScrollView>
