--- a/app/src/main/res/layout/reporthistory.xml
+++ b/app/src/main/res/layout/reporthistory.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -19,7 +18,7 @@
         android:id="@+id/topTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="차단 내역"
+        android:text="신고 내역"
         android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -45,28 +44,17 @@
 
     </Button>
 
-    <ImageView
-        android:id="@+id/nohistoryimg"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/nohistory"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+    <ListView
+        android:id="@+id/banlist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topView"
-        android:layout_marginTop="130dp"
-        />
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="70dp"/>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="37dp"
-        android:text="차단된 번호가 없습니다"
-        android:textColor="#1E1E1E"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nohistoryimg"
-        android:layout_marginTop="50dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
