--- a/app/src/main/res/layout/banhistory.xml
+++ b/app/src/main/res/layout/banhistory.xml
@@ -44,25 +44,15 @@
 
     </Button>
 
-    <ScrollView
+    <ListView
+        android:id="@+id/banlist"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topView">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ListView
-                android:id="@+id/banlist"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/topView"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
