--- a/app/src/main/res/layout/qna.xml
+++ b/app/src/main/res/layout/qna.xml
@@ -13,7 +13,7 @@
     <View
         android:id="@+id/TopView"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="110dp"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,23 +50,12 @@
         app:layout_constraintVertical_bias="0.05"
         app:layout_constraintHorizontal_bias="0.9" />
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:iconifiedByDefault="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15"
-        android:queryHint="키워드를 입력하세요."/>
 
     <TextView
         android:id="@+id/TopTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="커뮤니티"
+        android:text="문의하기"
         android:textSize="30dp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -78,7 +67,7 @@
 
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/QnAlistView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constrainedHeight="true"
@@ -88,19 +77,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TopView"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:layout_marginBottom="20dp"/>
 
     <ImageButton
-        android:id="@+id/AddStoryButton"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:id="@+id/AddBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleType="centerInside"
         android:src="@drawable/plusbtn"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="70dp"
         android:layout_marginRight="30dp" />
 
 
