--- a/app/src/main/res/layout/qna_non.xml
+++ b/app/src/main/res/layout/qna_non.xml
@@ -19,7 +19,7 @@
         android:id="@+id/topTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="차단 내역"
+        android:text="문의하기"
         android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -68,5 +68,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nohistoryimg"
         android:layout_marginTop="50dp"/>
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/plusbtn"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="70dp"
+        android:layout_marginRight="30dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
