--- a/app/src/main/res/layout/reportedit.xml
+++ b/app/src/main/res/layout/reportedit.xml
@@ -151,11 +151,12 @@
                 android:id="@+id/EndWriteButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="작성하기"
+                android:text="수정하기"
                 android:textColor="@color/white"
-                android:backgroundTint="#E76363"
+                android:backgroundTint="#28BEEE"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/StoryBox"
+                
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="60dp"
                 android:layout_marginRight="60dp"
