--- a/app/src/main/res/layout/reporthistory.xml
+++ b/app/src/main/res/layout/reporthistory.xml
@@ -28,12 +28,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05" />
 
-    <Button
+    <ImageButton
         android:id="@+id/BackButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/white"
-        android:text="B"
+        android:src="@drawable/backbtn"
         android:textColor="#28BEEE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,10 +42,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05">
 
-    </Button>
-
+    </ImageButton>
     <ListView
-        android:id="@+id/banlist"
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constrainedHeight="true"
