--- a/app/src/main/res/layout/reporthistory_non.xml
+++ b/app/src/main/res/layout/reporthistory_non.xml
@@ -29,12 +29,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05" />
 
-    <Button
+    <ImageButton
         android:id="@+id/BackButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/white"
-        android:text="B"
+        android:src="@drawable/backbtn"
         android:textColor="#28BEEE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05">
 
-    </Button>
+    </ImageButton>
 
     <ImageView
         android:id="@+id/nohistoryimg"
